Reactions were not showing up. Bug fixed.

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
 
   display: flex;
   flex-wrap: wrap;
+  align-content: center;
   align-items: center;
   justify-content: center;
 }
